[gd_scene load_steps=102 format=3 uid="uid://cc4jujma05fsl"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_pwakn"]
[ext_resource type="Texture2D" uid="uid://c53qy8sndaipd" path="res://Assets/Characters/Yan.png" id="2_akdt5"]
[ext_resource type="AudioStream" uid="uid://dasp7trpdq5vh" path="res://Assets/SFX/oi.mp3" id="3_08hwj"]
[ext_resource type="Texture2D" uid="uid://cuu56odps5oj2" path="res://Assets/Characters/shazza.png" id="3_e58c8"]
[ext_resource type="Texture2D" uid="uid://xmkmqywql5de" path="res://Assets/Characters/star_01.png" id="4_y76a6"]
[ext_resource type="Script" path="res://Scripts/stick_light.gd" id="5_duomj"]
[ext_resource type="AudioStream" uid="uid://2omlmb183pcu" path="res://Assets/SFX/shazza_attack.mp3" id="7_ak1rr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n0jon"]
atlas = ExtResource("2_akdt5")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3tmk"]
atlas = ExtResource("2_akdt5")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_amloc"]
atlas = ExtResource("2_akdt5")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h572f"]
atlas = ExtResource("2_akdt5")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pq2pi"]
atlas = ExtResource("2_akdt5")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_njkgh"]
atlas = ExtResource("2_akdt5")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlb5q"]
atlas = ExtResource("2_akdt5")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rabus"]
atlas = ExtResource("2_akdt5")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fm2w"]
atlas = ExtResource("2_akdt5")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo8gf"]
atlas = ExtResource("2_akdt5")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_efacl"]
atlas = ExtResource("2_akdt5")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi56r"]
atlas = ExtResource("2_akdt5")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifowb"]
atlas = ExtResource("2_akdt5")
region = Rect2(0, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_22rgo"]
atlas = ExtResource("2_akdt5")
region = Rect2(16, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkrq8"]
atlas = ExtResource("2_akdt5")
region = Rect2(32, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkq4k"]
atlas = ExtResource("2_akdt5")
region = Rect2(48, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7xhq"]
atlas = ExtResource("2_akdt5")
region = Rect2(64, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aveya"]
atlas = ExtResource("2_akdt5")
region = Rect2(0, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ao43p"]
atlas = ExtResource("2_akdt5")
region = Rect2(16, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqs7q"]
atlas = ExtResource("2_akdt5")
region = Rect2(32, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nlla"]
atlas = ExtResource("2_akdt5")
region = Rect2(48, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7buua"]
atlas = ExtResource("2_akdt5")
region = Rect2(64, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r4s0"]
atlas = ExtResource("2_akdt5")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6ko8"]
atlas = ExtResource("2_akdt5")
region = Rect2(0, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4uri"]
atlas = ExtResource("2_akdt5")
region = Rect2(16, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vs5o4"]
atlas = ExtResource("2_akdt5")
region = Rect2(32, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykdqk"]
atlas = ExtResource("2_akdt5")
region = Rect2(48, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ujaa"]
atlas = ExtResource("2_akdt5")
region = Rect2(64, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o80bw"]
atlas = ExtResource("2_akdt5")
region = Rect2(0, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7smv"]
atlas = ExtResource("2_akdt5")
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2shw"]
atlas = ExtResource("2_akdt5")
region = Rect2(16, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7f7ju"]
atlas = ExtResource("2_akdt5")
region = Rect2(32, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hs6o0"]
atlas = ExtResource("2_akdt5")
region = Rect2(48, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_valjt"]
atlas = ExtResource("2_akdt5")
region = Rect2(64, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ots7u"]
atlas = ExtResource("2_akdt5")
region = Rect2(0, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jlvf"]
atlas = ExtResource("2_akdt5")
region = Rect2(16, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2w0w"]
atlas = ExtResource("2_akdt5")
region = Rect2(32, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xdnh"]
atlas = ExtResource("2_akdt5")
region = Rect2(48, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwwdu"]
atlas = ExtResource("2_akdt5")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3kwu"]
atlas = ExtResource("2_akdt5")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4cao"]
atlas = ExtResource("2_akdt5")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsakp"]
atlas = ExtResource("2_akdt5")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4in6e"]
atlas = ExtResource("2_akdt5")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4hrn"]
atlas = ExtResource("2_akdt5")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_widb0"]
atlas = ExtResource("2_akdt5")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lddc"]
atlas = ExtResource("2_akdt5")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0s2k0"]
atlas = ExtResource("3_e58c8")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypx10"]
atlas = ExtResource("3_e58c8")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oiy6x"]
atlas = ExtResource("3_e58c8")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxoh2"]
atlas = ExtResource("3_e58c8")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymcqo"]
atlas = ExtResource("3_e58c8")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_317wt"]
atlas = ExtResource("3_e58c8")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2u7nj"]
atlas = ExtResource("3_e58c8")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lll6w"]
atlas = ExtResource("3_e58c8")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_noie2"]
atlas = ExtResource("3_e58c8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6td5c"]
atlas = ExtResource("3_e58c8")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_12w6v"]
atlas = ExtResource("3_e58c8")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqnag"]
atlas = ExtResource("3_e58c8")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_28s61"]
atlas = ExtResource("3_e58c8")
region = Rect2(0, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx24l"]
atlas = ExtResource("3_e58c8")
region = Rect2(16, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_83b8w"]
atlas = ExtResource("3_e58c8")
region = Rect2(32, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8450r"]
atlas = ExtResource("3_e58c8")
region = Rect2(48, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cioqu"]
atlas = ExtResource("3_e58c8")
region = Rect2(64, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8x52"]
atlas = ExtResource("3_e58c8")
region = Rect2(0, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gi3us"]
atlas = ExtResource("3_e58c8")
region = Rect2(16, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwvyk"]
atlas = ExtResource("3_e58c8")
region = Rect2(32, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eaxk"]
atlas = ExtResource("3_e58c8")
region = Rect2(48, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvba7"]
atlas = ExtResource("3_e58c8")
region = Rect2(64, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uctvf"]
atlas = ExtResource("3_e58c8")
region = Rect2(0, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2doa"]
atlas = ExtResource("3_e58c8")
region = Rect2(16, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_03wqu"]
atlas = ExtResource("3_e58c8")
region = Rect2(32, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcmo3"]
atlas = ExtResource("3_e58c8")
region = Rect2(48, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_61exc"]
atlas = ExtResource("3_e58c8")
region = Rect2(64, 112, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypadc"]
atlas = ExtResource("3_e58c8")
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vximl"]
atlas = ExtResource("3_e58c8")
region = Rect2(16, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7l487"]
atlas = ExtResource("3_e58c8")
region = Rect2(32, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_67pa2"]
atlas = ExtResource("3_e58c8")
region = Rect2(48, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0udf"]
atlas = ExtResource("3_e58c8")
region = Rect2(64, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tq6o"]
atlas = ExtResource("3_e58c8")
region = Rect2(0, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bf2l"]
atlas = ExtResource("3_e58c8")
region = Rect2(16, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kfbx"]
atlas = ExtResource("3_e58c8")
region = Rect2(32, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dmq2"]
atlas = ExtResource("3_e58c8")
region = Rect2(48, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_de4q2"]
atlas = ExtResource("3_e58c8")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3axjm"]
atlas = ExtResource("3_e58c8")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_akm8h"]
atlas = ExtResource("3_e58c8")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qixjj"]
atlas = ExtResource("3_e58c8")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j7hn"]
atlas = ExtResource("3_e58c8")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lb8rn"]
atlas = ExtResource("3_e58c8")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgbcu"]
atlas = ExtResource("3_e58c8")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps057"]
atlas = ExtResource("3_e58c8")
region = Rect2(48, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_xrrd4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0jon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3tmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amloc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h572f")
}],
"loop": true,
"name": &"Yan_attack_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pq2pi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njkgh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlb5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rabus")
}],
"loop": true,
"name": &"Yan_attack_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fm2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo8gf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efacl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi56r")
}],
"loop": true,
"name": &"Yan_attack_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifowb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22rgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkrq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkq4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7xhq")
}],
"loop": false,
"name": &"Yan_die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aveya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ao43p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqs7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nlla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7buua")
}],
"loop": true,
"name": &"Yan_idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r4s0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6ko8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4uri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vs5o4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykdqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ujaa")
}],
"loop": true,
"name": &"Yan_idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o80bw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7smv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2shw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7f7ju")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hs6o0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_valjt")
}],
"loop": true,
"name": &"Yan_idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ots7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jlvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2w0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xdnh")
}],
"loop": true,
"name": &"Yan_walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwwdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3kwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4cao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsakp")
}],
"loop": true,
"name": &"Yan_walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4in6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4hrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_widb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lddc")
}],
"loop": true,
"name": &"Yan_walk_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s2k0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypx10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oiy6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxoh2")
}],
"loop": true,
"name": &"shazza_attack_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymcqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_317wt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2u7nj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lll6w")
}],
"loop": true,
"name": &"shazza_attack_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_noie2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6td5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12w6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqnag")
}],
"loop": true,
"name": &"shazza_attack_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_28s61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx24l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83b8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8450r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cioqu")
}],
"loop": true,
"name": &"shazza_die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8x52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gi3us")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwvyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eaxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvba7")
}],
"loop": true,
"name": &"shazza_idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uctvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2doa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03wqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcmo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61exc")
}],
"loop": true,
"name": &"shazza_idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypadc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vximl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l487")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67pa2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0udf")
}],
"loop": true,
"name": &"shazza_idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tq6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bf2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kfbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dmq2")
}],
"loop": true,
"name": &"shazza_walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_de4q2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3axjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akm8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qixjj")
}],
"loop": true,
"name": &"shazza_walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j7hn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lb8rn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgbcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ps057")
}],
"loop": true,
"name": &"shazza_walk_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7g3gr"]
radius = 4.0
height = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_h8xg8"]
radius = 7.0

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_4nq3u"]
polygon = PackedVector2Array(-5, 7, 2, 4, 9, 7, 2, 10)

[node name="player" type="CharacterBody2D"]
collision_mask = 3
script = ExtResource("1_pwakn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_xrrd4")
animation = &"Yan_walk_down"
autoplay = "Yan_idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_7g3gr")

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_h8xg8")

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
offset_left = -6.0
offset_top = -12.0
offset_right = 34.0
offset_bottom = -1.0
scale = Vector2(0.3, 0.3)
fill_mode = 1
show_percentage = false

[node name="bazza_attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_08hwj")

[node name="stick_light" type="PointLight2D" parent="."]
color = Color(1, 0.631373, 0.14902, 1)
texture = ExtResource("4_y76a6")
script = ExtResource("5_duomj")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2(-2, 0)
occluder = SubResource("OccluderPolygon2D_4nq3u")

[node name="shazza_attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ak1rr")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
